# mxatlas

./: .gitignore  CNAME  DATA_SOURCES.md  README.md  data.json  datenschutz.html  impressum.html  index.html  pyproject.toml  validation_report.csv  validation_report.json
.github/workflows/: ci.yml  nightly.yml
src/mail_sovereignty/: build_data_de.py  build_site_de.py  classify.py  cli.py  constants.py  dns.py  postprocess.py  preprocess.py  validate.py
tests/: test_classify.py  test_cli.py  test_constants.py  test_dns.py  test_postprocess.py  test_preprocess.py  test_validate.py
